# spirv2clc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: presubmit.yml
include/: spirv2clc.h
lib/: CMakeLists.txt  instns.cpp  instns_ext.cpp  translator.cpp  types.cpp  utils.cpp
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/cases/: access_chain_logical.spt  access_chain_ptr.spt  access_chain_signed_index.spt  array_const.spt  array_decl_double.spt  array_load_value.spt  array_of_ptr_struct.spt  atomic_float_add.spt  atomic_load_store.spt  atomics_int64.spt  barrier_no_memory_fence.spt  bool_vector_logical.spt  builtin_vector_whole_value.spt  byval_call_site.spt  composite_insert_pointer_leaf.spt  constant_array_ptr.spt  control_barrier_fence.spt  convert_stof_signed.spt  copy_memory.spt  copy_memory_address_space.spt  cov_async_copy_wait.spt  cov_atomic_cmpxchg.spt  cov_atomic_inc_dec.spt  cov_builtins_subgroup_size.spt  cov_builtins_workdim.spt  cov_builtins_workitem.spt  cov_capability_float16.spt  cov_cflow_branch_phi.spt  cov_cflow_lifetime.spt  cov_cflow_loop.spt  cov_cflow_switch.spt  cov_composite_array.spt  cov_composite_struct.spt  cov_composite_vector.spt  cov_debug_source_string.spt  cov_decoration_group.spt  cov_decorations_misc.spt  cov_execution_modes.spt  cov_ext_half_loadstore.spt  cov_ext_intptr_out.spt  (+50 more)
tests/testlayer/: CMakeLists.txt
tools/: spirv2clc.cpp
